arabic version update

--- a/src/locales/ar.json
+++ b/src/locales/ar.json
@@ -1,19 +1,30 @@
 {
+    ".nav-item" : {
+        "1" : "الرئيسية",
+        "2" : "تقديم",
+        "3" : "قواعد المسابقة",
+        "4" : "هيئة المحلفين",
+        "5" : "جوائز"
+    },
     ".presentation" : {
+        "btn" : "كيفية المشاركة ؟", 
         "partners" : "شركاؤنا",
         "hero" : "<img class=\"quote p-2\" src=\"../images/icons/quote2.svg\" alt=\"\"> مبادرة تنمية الدار البيضاء الكبرى من خلال الإبداع<img class=\"quote p-2\" src=\"../images/icons/quote1.svg\" alt=\"\">",
         "text" : " من أجل ربط المواهب الشابة بالتراث الغني والمتعدد للدار البيضاء ، مبادرة \"أثارت\" بإشراف \" الدار البيضاء للتراث\" ومجموعة من الفاعلين في المجال الاقتصادي، الثقافي والمدني ، تهدف إلى تعزيز التراث المادي والغير المادي للمدينة ، من خلال الإبداع والفن. <br><br>تم إنشاء هذه المبادرة لصالح الفئة الكبيرة من المصممين، الفنانين، المهندسين المعماريين، المبدعين والمواهب الذين يبتكرون على أساس يومي ، اليوم \"أثارت\" تدعوك  لاكتشاف إبداعك وروح المبادرة الخاص بك لجعل تراث الدار البيضاء مصدرًا للتنمية المستدامة للجميع."
     },
     ".participer-1" : {
+        "btn" : "أشارك",
         "text" : "يحتفظ تراث الدار البيضاء المادي وغير المادي بميراث فريد قادر على دعم مشاريع التنمية الاقتصادية والاجتماعية. <br><br> استلهم من تراث الدار البيضاء وتخيل المشاريع المبتكرة التي تخلق ثروة ثقافية واقتصادية:",
         "list" : "<p>تعزيز التراث المعماري للدار البيضاء.</p> <p>إعادة تقييم التراث الشفهي والفنون المسرحية (أحواش ، العيطة ، المرساوي ، الغيوان ، تاكادة ، لمشاهب ، شعر ، حكايات ، أمثال ...)</p> <p>إعادة ابتكار التراث الاحتفالي وفن الطهي.</p> <p>تشجيع الحرف التقليدية.</p>",
         "quote" : "لذا ابحث واعثر عن أفكار أصلية للمشاريع الثقافية والمبتكرة ، التي يمكن أن تعزز التراث الثقافي للدار البيضاء."
     },
     ".participer-2" : {
+        "btn" : "أشارك",
         "text" : "هل تعلم أن المخططات العمرانية الأولى، التي كانت بمثابة نماذج للتهيئة في أوروبا خلال الخمسينيات من القرن الماضي ، تم إنشاؤها واختبارها في الدار البيضاء؟<br> <br> هذه المدينة ، التي شهدت ولادة التخطيط الحضري الحديث، هي رمز حقيقي للابتكار في التنقل: تقسيم المناطق، مخطط التنقل الحضري، الشوارع الكبيرة والتخطيط الحضري ... العديد من الابتكارات التي كانت فيها الدار البيضاء مختبراً حقيقياً مفتوحا. <br><br> اليوم ، ندعوا المبدعين ورواد الأعمال إلى تحسين هذا التنقل الحضري من خلال اقتراح مشاريع تعيد ابتكار وسائل النقل والمرافق الحضرية العامة والتي تقدم حلولًا تجعل حركة التنقل في أنحاء المدينة أسهل لجميع المواطنين والزوار.",
         "quote" : "انضموا إلينا لتصميم المشاريع المبتكرة وشاركوا للفوز بجائزة \"آثارت\" للمشروع المبتكر في فئة التنقل."
     },
     ".participer-3" : {
+        "btn" : "أشارك",
         "text" : "الدار البيضاء ، مدينة مليئة بإمكانيات طبيعية هائلة ، والتي لا تزال غير مستغلة بالكامل. <br><br> ومع ذلك ، تواجه مدينة الدار البيضاء تحديات بيئية كبيرة.\"آثارت\" تدعو المواهب الشابة إلى تقديم حلول مبتكرة ومبدعة لزيادة الوعي والحفاظ على هذا التراث الحيوي وتعزيزه من أجل رفاهية جميع السكان.",
         "quote" : "استلهم من هذا التراث الغني، الذي يمكن أن يخلق تأثيرًا اجتماعيًا واقتصاديًا لمدينتنا. اقتراحوا مشاريع لتسليط الضوء على هذه الثروة الطبيعية والفوز بجائزة \"آثارت\" في فئة البيئة."
     },
@@ -35,7 +46,7 @@
     },
     ".comite" : {
         "title" : "اللجنة العلمية",
-        "hero" : "<img class=\"quote p-2\" src=\"../images/icons/quote1.svg\" alt=\"\">تقوم اللجنة العلمية بفحص جميع الطلبات الواردة وتصفيتها ، يتم رفض الطلبات المخالفة والتحقق من صحة الطلبات التي تستوفي متطلبات المسابقة ، بعد ذلك تشارك لجنة التحكيم في الخطوة التالية للتصنيف والتقييم.<img class=\"quote p-2\" src=\"../images/icons/quote2.svg\" alt=\"\">",
+        "hero" : "<img class=\"quote p-2\" src=\"../images/icons/quote2.svg\" alt=\"\">تقوم اللجنة العلمية بفحص جميع الطلبات الواردة وتصفيتها ، يتم رفض الطلبات المخالفة والتحقق من صحة الطلبات التي تستوفي متطلبات المسابقة ، بعد ذلك تشارك لجنة التحكيم في الخطوة التالية للتصنيف والتقييم.<img class=\"quote p-2\" src=\"../images/icons/quote1.svg\" alt=\"\">",
         "com-1" :"<img class=\"mb-3 rounded-circle\" width=\"120px\" src=\"../images/comite/youssef.png\" alt=\"\"> <p class=\"\"> <span class=\"comite-name\">السيد يوسف جاجيلي</span> <br> </p> <ul> <li>صحفي / كاتب</li> <li>خبير اتصالات</li> <li>خبرة في مجال الإعلام</li> </ul>",
         "com-2" : "<img class=\"mb-3 rounded-circle\" width=\"120px\" src=\"../images/comite/hassan.png\" alt=\"\"> <p class=\"\"> <span class=\"comite-name\">السيد حسن لحلو</span> <br> </p> <ul> <li>القنصل الشرفي لجمهورية كرواتيا بالدار البيضاء.</li> </ul>",
         "com-3" : "<img class=\"mb-3 rounded-circle\" width=\"120px\" src=\"../images/comite/nabil.png\" alt=\"\"> <p class=\"\"> <span class=\"comite-name\">السيد نبيل جباري</span> <br> </p> <ul> <li>رجال الأعمال في مجال الثقافة</li> <li>إتقان مدينة الدار البيضاء</li> </ul>"
@@ -55,7 +66,7 @@
         "j11" : "<img class=\"mb-3 rounded-circle\" height=\"120px\" width=\"120px\" src=\"../images/comite/adnane.png\" alt=\"\"> <p class=\"\"> <span class=\"vert\">عزيز دادان</span> <br> </p> <ul> <li>• مدير شركة • فاعل اجتماعي ثقافي</li> <li>• مصداقية  • ثقافة عظيمة</li> <li>• خبير في التقنيات الجديدة</li> </ul>",
         "j12" : "<img class=\"mb-3 rounded-circle\" width=\"120px\" src=\"../images/comite/hind.png\" alt=\"\"> <p class=\"\"> <span class=\"vert\">هند لعيدي</span> <br> </p> <ul> <li>• مؤسسة ورئيسة جمعية جود</li> <li>• جمعوية  • ذات مصداقية</li> <li>• خبرة دولية</li> </ul>",
         "j13" : "<div style=\"width: 120px; height: 120px;\" class=\"rounded-circle bg-secondary mb-3 mx-auto\"></div> <p class=\"\"> <span class=\"vert  text-uppercase\">ياسين جمال</span> <br> </p> <ul> <li>• عضو في حركة OTED ، وهي مبادرة للتنمية الإقليمية والابتكار</li> <li>• خبير دولي في تطوير السوق وإدارة الابتكار</li> </ul>",
-        "cta" : "Comment participer"
+        "cta" : "كيفية المشاركة ؟"
     },
     ".prixx" : {
         "p1" : "<div class=\"col-md-5\"><h1 class=\"animate__bounceInLeft animate__animated\">الجائزة الأولى <br> في جميع الفئات</h1></div><div class=\"col-md-7 my-5\"><img class=\"w-100 animate__animated animate__bounceInRight\" src=\"../images/prix1.png\" alt=\"\"></div><div class=\"col-md-12\" style=\"text-align: end;\"><button class=\"py-2 px-5 rounded-pill align-self-end btn-2\">أشارك</button></div>",
