--- a/src/locales/ar.json
+++ b/src/locales/ar.json
@@ -30,11 +30,12 @@
     },
     ".reglement" : {
         "titre" : "كيفية المشاركة ؟",
-        "desc" : "أنت مبدع ، مصمم ، رسام ، موسيقي ، رائد أعمال أومجرد مواطن لديه الكثير من الأفكار ، شارك معنا مشاريع التنمية التراثية المبدعة الخاصة بك للفوز بجائزة آثارت.<br><br> <strong>قبل نشر أفكارك ، يرجى تنزيل وقراءة<a href=\"#\"> قواعد المسابقة </a> </strong>",
-        "phase-1" : "<img class=\"mb-3\" width=\"120px\" src=\"../images/SVG/phase1.svg\" alt=\"\"> <p class=\"text-start\"> <span class=\"border-bott\">من  شهر XX إلى  شهر XX 2021 </span> <br> أرسل مقترحات مشروعك الإبداعي على منصة المشاركة:<a href=\"#\"> www. art.ma/candidature</a> </p>",
-        "phase-2" : "<img class=\"mb-3\" width=\"120px\" src=\"../images/SVG/phase2.svg\" alt=\"\"> <p class=\"text-start\"> <span class=\"border-bott\"> من  شهر XX إلى  شهر XX 2021</span> <br> سيتم إجراء الفرز الأول من قبل فريق المشروع الفني للاحتفاظ فقط بالعروض التي تفي بميثاق المبادرة المفصل في قواعد المسابقة.</p>",
-        "phase-3" : "<img class=\"mb-3\" width=\"120px\" src=\"../images/SVG/phase3.svg\" alt=\"\"> <p class=\"text-start\"> <span class=\"border-bott\">من  شهر XX إلى  شهر XX 2021</span> <br>سيتم إجراء الفرز الثاني من قبل اللجنة التوجيهية للمشروع للاحتفاظ بأجمل 100 عرض. يمكن أن يكون هذا الفرز أقل أو أكثر حسب جودة العروض.</p>",
-        "phase-4" : "<img class=\"mb-3\" width=\"120px\" src=\"../images/SVG/phase4.svg\" alt=\"\"> <p class=\"text-start\"> <span class=\"border-bott\">من  شهر XX إلى  شهر XX 2021</span> <br> اختيار لجنة التحكيم النهائية لأفضل 3 إبداعات حسب الفئة وأفضل 3 أعمال في جميع الفئات (يمكن مراجعة هذا الرقم وفق جودة العروض).</p>",
+        "desc" : "أنت مبدع ، مصمم ، رسام ، موسيقي ، رائد أعمال أومجرد مواطن لديه الكثير من الأفكار ، شارك معنا مشاريع التنمية التراثية المبدعة الخاصة بك للفوز بجائزة آثارت.<br><br> <strong>قبل نشر أفكارك ، يرجى تنزيل وقراءة<a href=\"../images/reglement-et-charte-initiative-Ath'Art.pdf\" download style=\"font-size: 20px; color: #26A7A1;\"> قواعد المسابقة </a> </strong>",
+        "phase-5" : "<img src=\"../images/phase1.png\" width=\"100%\" alt=\"phase-1\"><a href=\"https://athart.ma/candidature\"  style=\"font-size: 16px; color: #26A7A1; font-weight: bold; padding: 13px;\">Candidature</a>",
+        "phase-4" : "<img src=\"../images/phase2.png\" width=\"100%\" alt=\"phase-2\">",
+        "phase-3" : "<img src=\"../images/phase3.png\" width=\"100%\" alt=\"phase-3\">",
+        "phase-2" : "<img src=\"../images/phase4.png\" width=\"100%\" alt=\"phase-4\">",
+        "phase-1" : "<img src=\"../images/phase5.png\" width=\"100%\" alt=\"phase-5\">",
         "cta" : "<a href=\"./participer.html\" class=\"py-2 px-5 rounded-pill align-self-end btn-1\">إختر فئتك</a>"
     },
     ".jury" : {
@@ -52,7 +53,7 @@
         "com-3" : "<img class=\"mb-3 rounded-circle\" width=\"120px\" src=\"../images/comite/nabil.png\" alt=\"\"> <p class=\"\"> <span class=\"comite-name\">السيد نبيل جباري</span> <br> </p> <ul> <li>رجال الأعمال في مجال الثقافة</li> <li>إتقان مدينة الدار البيضاء</li> </ul>"
     },
     ".jury-members" : {
-        "title" : "أعضاء لجنة التحكيم",
+        "title" : "<h2 style=\"font-size: 45px;\">أعضاء لجنة التحكيم</h2>",
         "j1" : "<img class=\"mb-3 rounded-circle\" width=\"120px\" src=\"../images/comite/lkhmari.png\" alt=\"\"><p class=\"\"> <span class=\"vert\">نورالدين لخماري</span> <br> </p> <ul> <li>• صانع أفلام، مخرج ومنتج</li> <li>• نرويجي مغربي مقيم بالدار البيضاء</li> <li>• خبرة مهمة في المجال السمعي البصري</li> <li>• اشتهر بأفلامه التي صنعت في الدار البيضاء</li> </ul>",
         "j2" : "<img class=\"mb-3 rounded-circle\" width=\"120px\" src=\"../images/comite/karim.png\" alt=\"\"> <p class=\"\"> <span class=\"vert\">دكتور كريم عديل</span> <br> </p> <ul><li>• محامي</li><li>• دكتوراه في القانون الدولي</li><li>• حكم في هيئة التحكيم المعنية بالرياضة (ط.ا.س)</li></ul>",
         "j3" : "<img class=\"mb-3 rounded-circle\" width=\"120px\" src=\"../images/comite/derhem.png\" alt=\"\"> <p class=\"\"> <span class=\"vert\">محمد الدرهم</span> <br> </p> <ul> <li>• فنان</li> <li>• ذو سمعة ومصداقية</li> <li>• معرفة الدار البيضاء وتراثها الشفوي والثقافي</li> <li>• مقاول</li> </ul>",
@@ -74,5 +75,10 @@
         "p3" : "<div class=\"col-md-5\"> <h1 class=\"\">الجائزة الثانية <br> لكل فئة</h1> </div> <div class=\"col-md-7 my-5\"> <img class=\"w-100\" src=\"../images/prix3.png\" alt=\"\"> </div> <div class=\"col-md-12\" style=\"text-align: end;\"> <button class=\"py-2 px-5 rounded-pill align-self-end btn-2\">أشارك</button> </div>",
         "p4" : "<div class=\"col-md-5\"> <h1 class=\"\">الجائزة الثالثة <br> لكل فئة</h1> </div> <div class=\"col-md-7 my-5\"> <img class=\"w-100\" src=\"../images/prix4.png\" alt=\"\"> </div> <div class=\"col-md-12\" style=\"text-align: end;\"> <button class=\"py-2 px-5 rounded-pill align-self-end btn-2\">أشارك</button> </div>",
         "p5" : "<div class=\"col-md-5\"> <h1 class=\"\">الجائزة للمشروع المفضل <br> لدى الجمهور</h1> </div> <div class=\"col-md-7 my-5\"> <img class=\"w-100\" src=\"../images/prix5.png\" alt=\"\"> </div> <div class=\"col-md-12\" style=\"text-align: end;\"> <button class=\"py-2 px-5 rounded-pill align-self-end btn-2\">أشارك</button> </div>" 
+    },
+    ".ju" :{
+        "jury-left" : "<img src=\"../images/jury-left-ar.svg\" width=\"100%\" alt=\"\">",
+        "jury-right" : "<img src=\"../images/jury-right-ar.svg\" width=\"100%\" alt=\"\">",
+        "comite-left" : "<img src=\"../images/comite-left-ar.svg\" width=\"100%\" alt=\"\">"
     }
 }
